tests/parsing/trailing_semicolon/stderr.golden
error: extra ';' at line end
bus.fbd +2:38
   |
 2 |   st status width = 10; atomic = true;
   |                                      ^
